add admin products ejs + render callback

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -3,13 +3,13 @@
 <link rel="stylesheet" href="/css/product.css">
 </head>
 
-
+ 
 
 <body>
     <%- include('../includes/navigation.ejs') %>
 
     <h1>
-        hello from edit products
+        hello from products
     </h1>
 
 
