--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,3 +1,6 @@
-<h1>
-   ADD TO CART
-</h1>
+<form action="/cart" method="post">
+   <button class="btn" type="submit">Add to Cart</button>
+   <!-- name: Name of the form control. 
+      Submitted with the form as part of a name/value pair. -->
+   <input type="hidden" name="productId" value="<%= product.id %>">
+</form>
